<resources>

    <!-- APP -->
    <string name="app_name">Price Compare</string>

    <!-- Main Activity -->
    <string name="action_clean">Clean list</string>
    <string name="action_clean_toast">List Clean</string>
    <string name="limpar_lista_dica">Clean list</string>
    <string name="limpar_lista_img_descricao">Arrow pointing up</string>
    <string name="adicionar_produto_dica">Add product</string>
    <string name="adicionar_produto_img_descricao">Arrow pointing right</string>

    <!-- Product Adapter -->
    <string name="list_nome_produto">Product %d</string>
    <string name="list_peso">Quantity: %1$s%2$s</string>
    <string name="list_preco">Price: %s</string>
    <string name="list_valor_produto">Price per %1$s: %2$s</string>

    <!-- Add Product Activity -->
    <string name="add_product_title">Add product</string>
    <string name="add_product_toast_campo_vazio">Fields with * are required</string>
    <string name="add_product_nome">Name</string>
    <string name="add_product_preco">Price *</string>
    <string name="add_product_peso">Quantity *</string>
    <string name="add_product_pack_units">Units in the package *</string>
    <string name="add_product_pack">Package</string>
    <string name="add_product_save_icon_title">Save product</string>
    <string name="add_product_g" translatable="false">g</string>
    <string name="add_product_kg" translatable="false">Kg</string>
    <string name="add_product_l" translatable="false">L</string>
    <string name="add_product_ml" translatable="false">mL</string>
    <string name="add_product_un" translatable="false">Un</string>

    <!-- Ad -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9024902600072738/9959382409</string>
    <string name="required_field">* indicates required field</string>

</resources>